Kubernetes/deploymant-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: onlineeventbooking-maaz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: maaz/event-service:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbooking-maaz
spec:
  selector:
    app: event-service
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
