Kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: onlineeventbooking-maaz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: maaz/booking-service:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbooking-maaz
spec:
  selector:
    app: booking-service
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
